--- a/src/App.css
+++ b/src/App.css
@@ -581,6 +581,8 @@
     box-shadow: 0px 4px 8px 2px rgba(77,77,77,0.15);
     border-radius: 8px;
     cursor: pointer;
+    left: auto;
+    right: auto;
   }
   .pantry-cont h1{
     color: orange;
@@ -630,8 +632,8 @@
     align-items: center;
     margin: auto;
     padding: 5rem 0 1rem;
-    top: 0;
-    left: 17.5%;
+    top: 5%;
+    left: 21.75%;
     position: fixed;
   }
   #recipe-modal {
@@ -642,9 +644,10 @@
     border: 1px solid black;
     border-radius: 8px;
     background-color: white;
-    padding: 0 0 4rem;
+    padding: 1rem 0 4rem;
     justify-content: center;
     align-items: center;
+    margin: auto;
   }
   
   #close-recipe-modal {
